--- a/5eOGL/5eOGL.pug
+++ b/5eOGL/5eOGL.pug
@@ -33,32 +33,32 @@ include src/pug/_mixins.pug
   .inspiration-row.grid.background
     .inspiration.border
       h1(data-i18n='inspiration')
-      input(name='attr_inspiration' type='checkbox')
+      +checkboxInput(`inspiration`)
     .initiative.border
       button(data-i18n='initiative' name='roll_initiative' type='roll' value='')
       +textInput('initiative')
     .armor.border
       button(data-i18n='armor' name='roll_armor' type='roll' value='')
-      +numberInput('armor_class')
+      +numberInput('armor class')
       span(data-i18n='class')
     .hit-points.border
-      button(data-i18n='hit points')
-      +numberInput('hit_points')
+      h1(data-i18n='hit points')
+      +numberInput('hit points')
       span(data-i18n='current')
       span /
-      +numberInput('hit_points_max')
+      +numberInput('hit points max')
       span(data-i18n='max')
       .divider(style='width: 1px; background-color: black;')
-      +numberInput('hit_points_temp')
+      +numberInput('hit points temp')
       span(data-i18n='temp')
     .hit-dice.border
       button(data-i18n='hit dice' name='roll_hit-dice' type='roll' value='')
       select(name='attr_hit_die' value='d6')
         +diceOptions('d6')
-      input(name='attr_hit_dice' type='number' value='')
+      +numberInput('hit dice')
       span(data-i18n='current')
       span /
-      input(name='attr_hit_dice_max' type='number' value='') 
+       +numberInput('hit dice max')
       span(data-i18n='max')
     .death-saves.border
       button(data-i18n='death saves' name='roll_death-save' type='roll' value='')
@@ -67,12 +67,41 @@ include src/pug/_mixins.pug
       .row
         +deathSaves('fail')
 
-  .column.background
-    ABILITIES
-  .column.background
-    SKILLS
-  .column.background
-    EVERYTHING ELSE
+  .body
+    .ability.column.background
+      - const abilitiesScores = ['strength', 'dexterity', 'constitution', 'intelligence', 'wisdom', 'charisma']
+      each val in abilitiesScores
+        .border(class=`${val.toLowerCase()}`)
+          button(data-i18n=val name=`roll_${val}` value='')
+          +textInput(`${val} modifier`)
+          +numberInput(`${val} score`)
+          +checkboxInput(`${val} saving throw proficiency`)
+          +numberInput(`${val} saving throw modifier`)
+
+      fieldset(class='repeating_ability')
+
+
+    .column.background
+      .speed
+        h1(data-i18n='walking speed')
+        +numberInput('walking speed')
+
+      .speed
+        h1(data-i18n='passive perception')
+        +numberInput('passive erception')
+
+      .skills.border
+        h1.bottom-border(data-i18n='skills')
+
+        .skill-column
+          h2(data-i18n='Prof/Exp')
+
+        .skill-column
+
+        .skill-column
+
+    .column.background
+      EVERYTHING ELSE
 
 
 
