--- a/5eOGL/5eOGL.scss
+++ b/5eOGL/5eOGL.scss
@@ -137,7 +137,7 @@
     }
 
     .charsheet {
-        min-width: 30em;
+        min-width: 850px;
     }
 
 /* HIDE DIFFERENT SHEET TYPES BY DEFAULT
@@ -223,6 +223,24 @@ div.sheet-inspiration-row {
 
     h1 {
         font-size: 0.8em;
+    }
+}
+
+div.sheet-body {
+    div.sheet-column {
+        display: inline-block;
+
+        &:nth-of-type(1) {
+            width: 20%;
+        }
+
+        &:nth-of-type(2) {
+            width: 38%;
+        }
+
+        &:nth-of-type(3) {
+            width: 30%;
+        }
     }
 }
 
