--- a/5eOGL/5eOGL.css
+++ b/5eOGL/5eOGL.css
@@ -4,24 +4,28 @@
   box-sizing: border-box;
   font-family: sans-serif; }
 
-button:before {
-  display: none; }
-button:focus, button:hover, button:active {
-  background: none;
-  background-color: #79016f !important; }
-button:focus > h2, button:hover > h2, button:active > h2 {
-  color: whitesmoke;
-  text-shadow: 1px 1px 2px black, 0 0 25px rgba(136, 121, 190, 0.25), 0 0 5px #79016f; }
-button[type="roll"], button[type="action"] {
-  background-color: whitesmoke;
-  border-bottom: 0.01em solid #666;
-  border-bottom-right-radius: 0.01em;
-  border-color: #b3b3b3;
-  border-radius: 0.25em;
-  border-right: 0.02em solid #333333;
-  border-style: outset;
-  margin: 0.2em !important;
-  padding: 0.1em !important; }
+button {
+  text-transform: capitalize; }
+  button:before {
+    display: none; }
+  button:focus, button:hover, button:active {
+    background: none;
+    background-color: #79016f !important;
+    color: whitesmoke; }
+  button:focus > h2, button:hover > h2, button:active > h2 {
+    color: whitesmoke;
+    text-shadow: 1px 1px 2px black, 0 0 25px rgba(136, 121, 190, 0.25), 0 0 5px #79016f; }
+  button[type="roll"], button[type="action"] {
+    background-color: whitesmoke;
+    border-bottom: 0.01em solid #666;
+    border-bottom-right-radius: 0.01em;
+    border-color: #b3b3b3;
+    border-radius: 0.25em;
+    border-right: 0.02em solid #333333;
+    border-style: outset;
+    margin: 0em;
+    padding: 0.1em !important;
+    width: 100%; }
 
 div {
   background-color: transparent;
@@ -30,18 +34,15 @@ div {
 fieldset {
   background-color: transparent; }
 
+h1, h2, h3 {
+  text-transform: capitalize; }
+
 h1 {
   color: #4c4c4c; }
 
 h2 {
   font-size: 1em;
   line-height: 1.4em; }
-  h2.sheet-alt-color {
-    color: #79016f; }
-  h2.sheet-label {
-    border-bottom: 0.15em solid black;
-    text-align: center;
-    margin-left: 3%; }
 
 h3 {
   font-size: 1.25em;
@@ -50,19 +51,20 @@ h3 {
 input[type="text"], input[type="number"] {
   background-color: transparent;
   border-bottom: 0.15em solid black;
-  text-align: center;
   border-left: 0em;
   border-radius: 0em;
   border-right: 0em;
   border-top: 0em;
   height: 2.1em;
-  width: 100%; }
+  width: 100% !important; }
 input::placeholder {
   background-color: rgba(136, 121, 190, 0.25);
   border: 0.1em dotted #79016f; }
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0; }
+input[type='number'] {
+  text-align: center; }
 
 label {
   margin-bottom: 0px;
@@ -105,7 +107,7 @@ input.sheet-type[value="character"] ~ div.sheet-pc {
    ============================= */
 div.sheet-grid {
   display: inline-grid;
-  grid-column-gap: 1%;
+  grid-column-gap: 0.5%;
   grid-row-gap: 0.5%; }
 
 /* GENERIC CLASSES
@@ -116,8 +118,8 @@ div.sheet-background {
 .sheet-border {
   border: 0.15em solid #4c4c4c; }
 
-.sheet-bottom-border {
-  border-bottom: 0.2em solid black; }
+.sheet-border-bottom {
+  border-bottom: 0.15em solid black; }
 
 .sheet-pictos {
   font-family: "pictos"; }
@@ -137,30 +139,71 @@ div.sheet-character-info {
   div.sheet-character-info div.sheet-class-level {
     grid-area: 2 / 2 / 2 / 2;
     grid-template-columns: 1fr 10%; }
-    div.sheet-character-info div.sheet-class-level div.sheet-bottom-border {
+    div.sheet-character-info div.sheet-class-level div.sheet-border-bottom {
       grid-area: 1 / 3; }
   div.sheet-character-info div.sheet-race-background {
     grid-area: 3 / 1 / 3 / 3;
     grid-template-columns: 20% 2fr 1fr 10%; }
-  div.sheet-character-info div.sheet-bottom-border {
+  div.sheet-character-info div.sheet-border-bottom {
     grid-column: 1 / 5; }
 
 div.sheet-inspiration-row {
   grid-template-columns: 1fr 2fr 2fr 5fr 3fr 4fr; }
   div.sheet-inspiration-row h1 {
-    font-size: 0.8em; }
+    font-size: 1em;
+    text-align: center; }
+  div.sheet-inspiration-row h2 {
+    text-align: center; }
+  div.sheet-inspiration-row div.sheet-header {
+    border-bottom: 0.15em solid black; }
+  div.sheet-inspiration-row div.sheet-hit-points h2,
+  div.sheet-inspiration-row div.sheet-hit-dice h2 {
+    grid-row: 2; }
+    div.sheet-inspiration-row div.sheet-hit-points h2[data-i18n='max'],
+    div.sheet-inspiration-row div.sheet-hit-dice h2[data-i18n='max'] {
+      grid-column: 3; }
+  div.sheet-inspiration-row div.sheet-hit-points span,
+  div.sheet-inspiration-row div.sheet-hit-dice span {
+    font-size: 2em;
+    text-align: center; }
+  div.sheet-inspiration-row div.sheet-hit-points div.sheet-header {
+    grid-area: 1 / 1 / 1 / 6; }
+  div.sheet-inspiration-row div.sheet-hit-points div.sheet-body {
+    grid-template-columns: 2fr 1fr; }
+  div.sheet-inspiration-row div.sheet-hit-points input {
+    grid-row: 2; }
+  div.sheet-inspiration-row div.sheet-hit-points div.sheet-current {
+    border-right: 0.15em solid black;
+    grid-template-columns: 2fr 0.5fr 2fr; }
+    div.sheet-inspiration-row div.sheet-hit-points div.sheet-current h2[data-i18n='temp'] {
+      grid-column: 3; }
+  div.sheet-inspiration-row div.sheet-hit-dice div.sheet-header {
+    grid-template-columns: 2fr 1fr; }
+  div.sheet-inspiration-row div.sheet-hit-dice div.sheet-body {
+    grid-template-columns: 2fr 0.5fr 2fr; }
+  div.sheet-inspiration-row div.sheet-death-saves h2 {
+    margin-left: 5%;
+    text-align: left; }
+  div.sheet-inspiration-row div.sheet-death-saves div.sheet-body {
+    grid-template-columns: 1fr 2fr; }
+    div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-grid {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-row-gap: 2%; }
+    div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-line {
+      grid-column: 1 / 4;
+      height: 5px;
+      position: relative;
+      width: 100%; }
 
-div.sheet-body {
-  margin-top: 1%; }
-  div.sheet-body div.sheet-column {
-    display: inline-block;
-    vertical-align: top; }
-    div.sheet-body div.sheet-column:nth-of-type(1) {
-      width: 20%; }
-    div.sheet-body div.sheet-column:nth-of-type(2) {
-      width: 38%; }
-    div.sheet-body div.sheet-column:nth-of-type(3) {
-      width: 30%; }
+div.sheet-body div.sheet-column {
+  display: inline-block;
+  vertical-align: top; }
+  div.sheet-body div.sheet-column:nth-of-type(1) {
+    width: 20%; }
+  div.sheet-body div.sheet-column:nth-of-type(2) {
+    width: 38%; }
+  div.sheet-body div.sheet-column:nth-of-type(3) {
+    width: 30%; }
 
 /* The switch - the box around the slider */
 .sheet-switch {
