--- a/5eOGL/5eOGL.scss
+++ b/5eOGL/5eOGL.scss
@@ -18,6 +18,8 @@
     }
 
     button {
+        text-transform: capitalize;
+
         &:before {
             display: none;
         }
@@ -26,6 +28,7 @@
         &:active {
             background: none;
             background-color: $accent1 !important;
+            color: $white;
         }
 
         &:focus > h2,
@@ -45,8 +48,9 @@
                 right              : 0.02em solid hsl(0, 0%, 20%);
                 style              : outset;
             }
-            margin: 0.2em !important;
+            margin: 0em;
             padding: 0.1em !important;
+            width: 100%;
         }
     }
 
@@ -59,6 +63,10 @@
         background-color: transparent;
     }
 
+    h1, h2, h3 {
+        text-transform: capitalize;
+    }
+
     h1 {
         color: $gray;
     }
@@ -66,14 +74,6 @@
     h2 {
         font-size: 1em;
         line-height: 1.4em;
-        &.sheet-alt-color {
-            color: $accent1;
-        }
-        &.sheet-label {
-            border-bottom: 0.15em solid $black;
-            text-align: center;
-            margin-left: 3%;
-        }
     }
 
     h3 {
@@ -86,7 +86,6 @@
         &[type="number"] {
             background-color: transparent;
             border-bottom: 0.15em solid $black;
-            text-align: center;
 
             border: {
                 left  : 0em;
@@ -95,7 +94,7 @@
                 top   : 0em;
             };
             height       : 2.1em;
-            width: 100%;
+            width: 100% !important;
         }
         &::placeholder {
             background-color: $accent2;
@@ -105,6 +104,10 @@
         &::-webkit-inner-spin-button {
           -webkit-appearance: none;
           margin: 0;
+        }
+
+        &[type='number'] {
+            text-align: center;
         }
     }
 
@@ -156,7 +159,7 @@
    ============================= */ 
     div.sheet-grid {
         display        : inline-grid;
-        grid-column-gap: 1%;
+        grid-column-gap: 0.5%;
         grid-row-gap   : 0.5%;
     }
 
@@ -171,8 +174,8 @@
         border: 0.15em solid $gray;
     }
 
-    .sheet-bottom-border {
-        border-bottom: 0.2em solid $black;
+    .sheet-border-bottom {
+        border-bottom: 0.15em solid $black;
     }
 
     .sheet-pictos {
@@ -203,7 +206,7 @@ div.sheet-character-info {
         grid-area: 2 / 2 / 2 / 2;
         grid-template-columns: 1fr 10%;
 
-        div.sheet-bottom-border {
+        div.sheet-border-bottom {
             grid-area: 1 / 3;
         }
     }
@@ -213,7 +216,7 @@ div.sheet-character-info {
         grid-template-columns: 20% 2fr 1fr 10%;
     }
 
-    div.sheet-bottom-border {
+    div.sheet-border-bottom {
         grid-column: 1 / 5;
     }
 }
@@ -222,13 +225,92 @@ div.sheet-inspiration-row {
     grid-template-columns: 1fr 2fr 2fr 5fr 3fr 4fr;
 
     h1 {
-        font-size: 0.8em;
+        font-size: 1em;
+        text-align: center;
+    }
+
+    h2 {
+        text-align: center;
+    }
+
+    div.sheet-header {
+        border-bottom: 0.15em solid $black;
+    }
+
+    div.sheet-hit-points,
+    div.sheet-hit-dice {
+        h2 {
+            grid-row: 2;
+
+            &[data-i18n='max'] {
+                grid-column: 3;
+            }
+        }
+
+        span {
+            font-size: 2em;
+            text-align: center;
+        }
+    }
+
+    div.sheet-hit-points {
+        div.sheet-header {
+            grid-area: 1 / 1 / 1 / 6;
+        }
+
+        div.sheet-body {
+            grid-template-columns: 2fr 1fr;
+        }
+
+        input {
+            grid-row: 2;
+        }
+
+        div.sheet-current {
+            border-right: 0.15em solid $black;
+            grid-template-columns: 2fr 0.5fr 2fr;
+
+            h2[data-i18n='temp'] {
+                grid-column: 3;
+            }
+        }
+    }
+
+    div.sheet-hit-dice {
+        div.sheet-header {
+            grid-template-columns: 2fr 1fr;
+        }
+
+        div.sheet-body {
+            grid-template-columns: 2fr 0.5fr 2fr;
+        }
+    }
+
+    div.sheet-death-saves {
+        h2 {
+            margin-left: 5%;
+            text-align: left;
+        }
+
+        div.sheet-body {
+            grid-template-columns: 1fr 2fr;
+
+            div.sheet-grid {
+               grid-template-columns: 1fr 1fr 1fr;
+               grid-row-gap: 2%;
+            }
+
+            div.sheet-line {
+                grid-column: 1 / 4;
+                height: 5px;
+                position: relative;
+                width: 100%;
+            }
+        }
     }
 }
 
 div.sheet-body {
-    margin-top: 1%;
-
     div.sheet-column {
         display: inline-block;
         vertical-align: top;
