--- a/5eOGL/5eOGL.css
+++ b/5eOGL/5eOGL.css
@@ -189,11 +189,25 @@ div.sheet-inspiration-row {
     div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-grid {
       grid-template-columns: 1fr 1fr 1fr;
       grid-row-gap: 2%; }
+      div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-grid label {
+        grid-row: 1;
+        margin-top: 5%; }
+        div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-grid label:nth-of-type(1) {
+          grid-column: 1; }
+        div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-grid label:nth-of-type(2) {
+          grid-column: 2; }
+        div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-grid label:nth-of-type(3) {
+          grid-column: 3; }
+      div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-grid input {
+        margin-left: 40%; }
     div.sheet-inspiration-row div.sheet-death-saves div.sheet-body div.sheet-line {
-      grid-column: 1 / 4;
+      background-color: black;
+      grid-area: 1 / 1 / 1 / 4;
       height: 5px;
       position: relative;
-      width: 100%; }
+      top: 48%;
+      width: 100%;
+      z-index: -1; }
 
 div.sheet-body div.sheet-column {
   display: inline-block;
