--- a/5eOGL/5eOGL.css
+++ b/5eOGL/5eOGL.css
@@ -23,8 +23,8 @@ button {
     border-radius: 0.25em;
     border-right: 0.02em solid #333333;
     border-style: outset;
-    margin: 0em;
-    padding: 0.1em !important;
+    margin: 0em !important;
+    padding: 0.1em;
     width: 100%; }
 
 div {
@@ -49,8 +49,7 @@ h3 {
   line-height: 36px; }
 
 input[type="text"], input[type="number"] {
-  background-color: transparent;
-  border-bottom: 0.15em solid black;
+  background-color: #b9dadf;
   border-left: 0em;
   border-radius: 0em;
   border-right: 0em;
@@ -148,7 +147,8 @@ div.sheet-character-info {
     grid-column: 1 / 5; }
 
 div.sheet-inspiration-row {
-  grid-template-columns: 1fr 2fr 2fr 5fr 3fr 4fr; }
+  grid-template-columns: 1fr 2fr 2fr 5fr 3fr 4fr;
+  margin-bottom: 1%; }
   div.sheet-inspiration-row h1 {
     font-size: 1em;
     text-align: center; }
@@ -209,15 +209,41 @@ div.sheet-inspiration-row {
       width: 100%;
       z-index: -1; }
 
-div.sheet-body div.sheet-column {
+div.sheet-main-body div.sheet-column {
   display: inline-block;
   vertical-align: top; }
-  div.sheet-body div.sheet-column:nth-of-type(1) {
-    width: 20%; }
-  div.sheet-body div.sheet-column:nth-of-type(2) {
+  div.sheet-main-body div.sheet-column:nth-of-type(1) {
+    width: 15%; }
+  div.sheet-main-body div.sheet-column:nth-of-type(2) {
     width: 38%; }
-  div.sheet-body div.sheet-column:nth-of-type(3) {
+  div.sheet-main-body div.sheet-column:nth-of-type(3) {
     width: 30%; }
+div.sheet-main-body div.sheet-ability div.sheet-border {
+  grid-template-columns: 1fr 3fr 2fr;
+  margin-bottom: 2%; }
+  div.sheet-main-body div.sheet-ability div.sheet-border div.sheet-score {
+    grid-template-columns: 1fr 2fr; }
+    div.sheet-main-body div.sheet-ability div.sheet-border div.sheet-score input {
+      text-align: center; }
+    div.sheet-main-body div.sheet-ability div.sheet-border div.sheet-score label[data-i18n-title*='score'] {
+      grid-area: 2 / 1 / 2 / 2;
+      position: relative;
+      z-index: 2;
+      height: 30px;
+      width: 35px; }
+      div.sheet-main-body div.sheet-ability div.sheet-border div.sheet-score label[data-i18n-title*='score'] > input {
+        border-radius: 30px;
+        border: 2px solid black;
+        font-size: 1em;
+        min-height: 30px;
+        min-width: 30px; }
+    div.sheet-main-body div.sheet-ability div.sheet-border div.sheet-score label[data-i18n-title*='modifier'] {
+      grid-area: 1 / 1 / 3 / 3; }
+      div.sheet-main-body div.sheet-ability div.sheet-border div.sheet-score label[data-i18n-title*='modifier'] > input {
+        min-height: 80px;
+        font-size: 2em; }
+  div.sheet-main-body div.sheet-ability div.sheet-border div.sheet-saves {
+    grid-template-columns: 1fr 3fr 2fr; }
 
 /* The switch - the box around the slider */
 .sheet-switch {
