--- a/5eOGL/5eOGL.pug
+++ b/5eOGL/5eOGL.pug
@@ -82,15 +82,19 @@ include src/pug/_mixins.pug
         +deathSaves('success')
         +deathSaves('fail')
 
-  .body
+  .main-body
     .ability.column.background(data-i18n-list="abilitiy-list")
       each val in abilitiesScores
         .border(class=val data-i18n-list=val)
-          +rollButton(`${val}`)
-          +textInput(`${val} modifier`)
-          +numberInput(`${val} score`)
-          +checkboxInput(`${val} saving throw proficiency`)
-          +numberInput(`${val} saving throw modifier`)
+          div
+            +rollButton(`${val}`)
+          .score.grid
+            +textInput(`${val} modifier`)
+            +numberInput(`${val} score`)
+          .saves.grid
+            +checkboxInput(`${val} saving throw proficiency`)
+            +saveButton(`${val} save`)
+            +numberInput(`${val} saving throw modifier`)
 
       fieldset(class='repeating_ability')
 
