--- a/5eOGL/5eOGL.css
+++ b/5eOGL/5eOGL.css
@@ -55,7 +55,7 @@ input[type="text"], input[type="number"] {
   border-right: 0em;
   border-top: 0em;
   height: 2.1em;
-  width: 100% !important; }
+  width: 100%; }
 input::placeholder {
   background-color: rgba(136, 121, 190, 0.25);
   border: 0.1em dotted #79016f; }
@@ -215,7 +215,7 @@ div.sheet-main-body div.sheet-column {
   div.sheet-main-body div.sheet-column:nth-of-type(1) {
     width: 15%; }
   div.sheet-main-body div.sheet-column:nth-of-type(2) {
-    width: 38%; }
+    width: 40%; }
   div.sheet-main-body div.sheet-column:nth-of-type(3) {
     width: 30%; }
 div.sheet-main-body div.sheet-ability div.sheet-border {
@@ -244,6 +244,33 @@ div.sheet-main-body div.sheet-ability div.sheet-border {
         font-size: 2em; }
   div.sheet-main-body div.sheet-ability div.sheet-border div.sheet-saves {
     grid-template-columns: 1fr 3fr 2fr; }
+div.sheet-main-body div.sheet-speed-perception {
+  grid-template-columns: 13% 1fr 13% 1fr; }
+  div.sheet-main-body div.sheet-speed-perception h1 {
+    font-size: 1em; }
+    div.sheet-main-body div.sheet-speed-perception h1[data-i18n='walking speed'] {
+      grid-area: 1 / 2 / 1 / 3; }
+    div.sheet-main-body div.sheet-speed-perception h1[data-i18n='passive perception'] {
+      grid-area: 1 / 4 / 1 / 4; }
+  div.sheet-main-body div.sheet-speed-perception label input {
+    border: 2px solid black;
+    border-radius: 3.5em;
+    height: 3.5em;
+    width: 3.5em; }
+  div.sheet-main-body div.sheet-speed-perception label[data-i18n='walking speed'] {
+    grid-area: 1 / 1 / 1 / 2; }
+  div.sheet-main-body div.sheet-speed-perception label[data-i18n='passive perception'] {
+    grid-area: 1 / 2 / 1 / 3; }
+div.sheet-main-body div.sheet-skills button {
+  text-align: left; }
+div.sheet-main-body div.sheet-skills div.sheet-headers {
+  grid-template-columns: 2em 60% 3fr 2fr; }
+  div.sheet-main-body div.sheet-skills div.sheet-headers h2 {
+    text-transform: capitalize; }
+div.sheet-main-body div.sheet-skills div.sheet-list div.sheet-rows {
+  grid-template-columns: 2em 60% 3fr 2fr; }
+div.sheet-main-body div.sheet-skills div.sheet-list input {
+  text-align: center; }
 
 /* The switch - the box around the slider */
 .sheet-switch {
