--- a/Warhammer 40k Black Crusade/src/scss/_generic.scss
+++ b/Warhammer 40k Black Crusade/src/scss/_generic.scss
@@ -16,6 +16,10 @@
        font-family: "pictos";
     }
 
+    .sheet-small-caps {
+        font-variant: small-caps;
+    }
+
     .sheet-d20 {
         font-family: "dicefontd20";
     }
@@ -60,6 +64,14 @@
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
 
+    div.sheet-10column {
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+
     div.sheet-2autocolumn {
         grid-template-columns: auto 1fr;
+    }
+
+    div.sheet-4autocolumn {
+        grid-template-columns: auto 1fr auto 1fr;
     }
