--- a/Warhammer 40k Black Crusade/warhammer40k.css
+++ b/Warhammer 40k Black Crusade/warhammer40k.css
@@ -63,7 +63,7 @@ input[type="text"], input[type="number"] {
   height: 2.1em;
   width: 100%; }
   input[type="text"]::placeholder, input[type="number"]::placeholder {
-    background-color: #c1a971;
+    background-color: #ceccc0;
     border: 0.1em dotted #620911; }
 input[type='number'] {
   text-align: center;
@@ -89,7 +89,7 @@ span {
 
 textarea {
   text-align: left;
-  border-bottom: 0.2em dotted #c1a971;
+  border-bottom: 0.2em dotted #ceccc0;
   font-size: 12px;
   font-weight: normal;
   min-height: 50px;
@@ -118,7 +118,7 @@ input.sheet-type[value="character"] ~ div.sheet-pc {
    ============================= */
 div.sheet-grid {
   display: inline-grid;
-  grid-column-gap: 1%;
+  grid-column-gap: 0.5%;
   grid-row-gap: 0.5%; }
 
 /* GENERIC CLASSES
@@ -136,6 +136,9 @@ div.sheet-background {
 
 .sheet-pictos {
   font-family: "pictos"; }
+
+.sheet-small-caps {
+  font-variant: small-caps; }
 
 .sheet-d20 {
   font-family: "dicefontd20"; }
@@ -170,8 +173,14 @@ div.sheet-4column {
 div.sheet-6column {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; }
 
+div.sheet-10column {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
+
 div.sheet-2autocolumn {
   grid-template-columns: auto 1fr; }
+
+div.sheet-4autocolumn {
+  grid-template-columns: auto 1fr auto 1fr; }
 
 span.sheet-display {
   border-bottom: 2px dotted black;
@@ -185,16 +194,59 @@ div.sheet-header, .sheet-rolltemplate-rolls div.sheet-template-container div.she
   border-top: 2px solid #620911;
   border-bottom: 2px solid #620911;
   text-align: center;
-  background: #c1a971;
+  background: #ceccc0;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #c1a971 0%, #57594f 50%, #c1a971 100%);
+  background: -moz-linear-gradient(top, #ceccc0 0%, #57594f 50%, #ceccc0 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #c1a971 0%, #57594f 50%, #c1a971 100%);
+  background: -webkit-linear-gradient(top, #ceccc0 0%, #57594f 50%, #ceccc0 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #c1a971 0%, #57594f 50%, #c1a971 100%);
+  background: linear-gradient(to bottom, #ceccc0 0%, #57594f 50%, #ceccc0 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$light', endColorstr='$light',GradientType=0 );
   /* IE6-9 */ }
+
+/*  PC
+    ============================= */
+div.sheet-pc {
+  border: 0.8em solid #4c4c4c;
+  background-color: #ede8e3;
+  padding: 2% 1%;
+  -moz-box-shadow: inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow: inset 0 0 10px #000000;
+  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30)";
+  zoom: 1; }
+  div.sheet-pc div.sheet-info h1 {
+    font-size: 1em;
+    color: black; }
+  div.sheet-pc div.sheet-info div.sheet-archetype {
+    grid-template-columns: auto 1fr auto 3em auto 1fr; }
+  div.sheet-pc div.sheet-characteristics div.sheet-10column {
+    grid-template-columns: 1.25fr 1.25fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
+  div.sheet-pc div.sheet-characteristics h3 {
+    font-size: 1em; }
+  div.sheet-pc div.sheet-skill-talents-traits div.sheet-headers {
+    grid-template-columns: 70% 29%; }
+  div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-row {
+    grid-template-columns: 60% 1fr 1fr 1fr 1fr; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-row h2 {
+      display: inline-block;
+      width: fit-content; }
+      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-row h2[data-i18n='trained'] {
+        grid-column: 2; }
+      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-row h2[data-i18n='10+'] {
+        grid-column: 3; }
+      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-row h2[data-i18n='20+'] {
+        grid-column: 4; }
+      div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-row h2[data-i18n='30+'] {
+        grid-column: 5; }
+  div.sheet-pc div.sheet-skill-talents-traits div.sheet-left-col {
+    display: inline-block;
+    width: 35%; }
+  div.sheet-pc div.sheet-skill-talents-traits div.sheet-right-col {
+    display: inline-block;
+    widows: 40%; }
 
 /*  SWITCH
     ============================= */
@@ -307,7 +359,7 @@ div.sheet-footer {
   .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body {
     background-color: whitesmoke; }
     .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row:nth-child(2n+0) {
-      background-color: #c1a971; }
+      background-color: #ceccc0; }
     .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row span.sheet-inlinerollresult {
       color: #620911;
       font-size: 2em;
